<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".activities.SP_Registration">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20dp" >



        <EditText
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:id="@+id/SPname"
            android:background="@drawable/rounded_border_edittext"
            android:layout_width="250sp"
            android:layout_height="50dp"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColorHint="#ff9a9a9a"
            android:textColor="@android:color/black"
            android:drawableLeft="@drawable/ic_person"
            />


        <EditText
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"

            android:id="@+id/SPEmail"
            android:background="@drawable/rounded_border_edittext"
            android:layout_width="250sp"
            android:layout_height="50dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColorHint="#ff9a9a9a"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:drawableLeft="@drawable/ic_email"
            />


        <EditText
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:id="@+id/SPPhonenumber"
            android:background="@drawable/rounded_border_edittext"
            android:layout_width="250sp"
            android:layout_height="50dp"
            android:hint="@string/hint_phone"
            android:textColorHint="#ff9a9a9a"
            android:inputType="phone"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:drawableLeft="@drawable/ic_phone_android"
            />


            <Spinner
                android:id="@+id/Spinner"
                style="@style/Spinner"
                android:layout_width="250sp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom">

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/SPRegisterbtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/text_register"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/spheadhtext"
        android:textColor="@color/white"
        android:textSize="35dp"
        app:fontFamily="@font/roboto_medium" />

</RelativeLayout>

